--- a/src/Components/createStory/CreateStory.css
+++ b/src/Components/createStory/CreateStory.css
@@ -2,7 +2,6 @@ body {
     font-family: sans-serif;
     background-color: #eeeeee;
   }
-  
   .file-upload {
     background-color: #ffffff;
     width: 600px;
@@ -135,7 +134,7 @@ body {
     --cyan: #17a2b8;
     --white: #fff;
     --gray: #6c757d;
-    --gray-dark: #343a40;
+    --gray-dark: #0E1924;
     --primary: #007bff;
     --secondary: #6c757d;
     --success: #28a745;
@@ -143,7 +142,7 @@ body {
     --warning: #ffc107;
     --danger: #dc3545;
     --light: #f8f9fa;
-    --dark: #343a40;
+    --dark: #0E1924;
     --breakpoint-xs: 0;
     --breakpoint-sm: 576px;
     --breakpoint-md: 768px;
@@ -1639,7 +1638,7 @@ body {
   
   .table .thead-dark th {
     color: #fff;
-    background-color: #343a40;
+    background-color: #0E1924;
     border-color: #454d55; }
   
   .table .thead-light th {
@@ -1649,7 +1648,7 @@ body {
   
   .table-dark {
     color: #fff;
-    background-color: #343a40; }
+    background-color: #0E1924; }
     .table-dark th,
     .table-dark td,
     .table-dark thead th {
@@ -1912,7 +1911,7 @@ body {
   .was-validated .custom-select:valid, .custom-select.is-valid {
     border-color: #28a745;
     padding-right: calc((1em + 0.75rem) * 3 / 4 + 1.75rem);
-    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%2328a745' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e") #fff no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem); }
+    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%230E1924' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%2328a745' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e") #fff no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem); }
     .was-validated .custom-select:valid:focus, .custom-select.is-valid:focus {
       border-color: #28a745;
       -webkit-box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
@@ -2013,7 +2012,7 @@ body {
   .was-validated .custom-select:invalid, .custom-select.is-invalid {
     border-color: #dc3545;
     padding-right: calc((1em + 0.75rem) * 3 / 4 + 1.75rem);
-    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23dc3545' viewBox='-2 -2 7 7'%3e%3cpath stroke='%23dc3545' d='M0 0l3 3m0-3L0 3'/%3e%3ccircle r='.5'/%3e%3ccircle cx='3' r='.5'/%3e%3ccircle cy='3' r='.5'/%3e%3ccircle cx='3' cy='3' r='.5'/%3e%3c/svg%3E") #fff no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem); }
+    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%230E1924' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23dc3545' viewBox='-2 -2 7 7'%3e%3cpath stroke='%23dc3545' d='M0 0l3 3m0-3L0 3'/%3e%3ccircle r='.5'/%3e%3ccircle cx='3' r='.5'/%3e%3ccircle cy='3' r='.5'/%3e%3ccircle cx='3' cy='3' r='.5'/%3e%3c/svg%3E") #fff no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem); }
     .was-validated .custom-select:invalid:focus, .custom-select.is-invalid:focus {
       border-color: #dc3545;
       -webkit-box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
@@ -2365,8 +2364,8 @@ body {
   
   .btn-dark {
     color: #fff;
-    background-color: #343a40;
-    border-color: #343a40; }
+    background-color: #0E1924;
+    border-color: #0E1924; }
     .btn-dark:hover {
       color: #fff;
       background-color: #23272b;
@@ -2376,8 +2375,8 @@ body {
       box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5); }
     .btn-dark.disabled, .btn-dark:disabled {
       color: #fff;
-      background-color: #343a40;
-      border-color: #343a40; }
+      background-color: #0E1924;
+      border-color: #0E1924; }
     .btn-dark:not(:disabled):not(.disabled):active, .btn-dark:not(:disabled):not(.disabled).active,
     .show > .btn-dark.dropdown-toggle {
       color: #fff;
@@ -2550,23 +2549,23 @@ body {
         box-shadow: 0 0 0 0.2rem rgba(248, 249, 250, 0.5); }
   
   .btn-outline-dark {
-    color: #343a40;
-    border-color: #343a40; }
+    color: #0E1924;
+    border-color: #0E1924; }
     .btn-outline-dark:hover {
       color: #fff;
-      background-color: #343a40;
-      border-color: #343a40; }
+      background-color: #0E1924;
+      border-color: #0E1924; }
     .btn-outline-dark:focus, .btn-outline-dark.focus {
       -webkit-box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
       box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5); }
     .btn-outline-dark.disabled, .btn-outline-dark:disabled {
-      color: #343a40;
+      color: #0E1924;
       background-color: transparent; }
     .btn-outline-dark:not(:disabled):not(.disabled):active, .btn-outline-dark:not(:disabled):not(.disabled).active,
     .show > .btn-outline-dark.dropdown-toggle {
       color: #fff;
-      background-color: #343a40;
-      border-color: #343a40; }
+      background-color: #0E1924;
+      border-color: #0E1924; }
       .btn-outline-dark:not(:disabled):not(.disabled):active:focus, .btn-outline-dark:not(:disabled):not(.disabled).active:focus,
       .show > .btn-outline-dark.dropdown-toggle:focus {
         -webkit-box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
@@ -3237,7 +3236,7 @@ body {
     line-height: 1.5;
     color: #495057;
     vertical-align: middle;
-    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px;
+    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%230E1924' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px;
     background-color: #fff;
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
@@ -4308,7 +4307,7 @@ body {
   
   .badge-dark {
     color: #fff;
-    background-color: #343a40; }
+    background-color: #0E1924; }
     a.badge-dark:hover, a.badge-dark:focus {
       color: #fff;
       background-color: #1d2124; }
@@ -5523,7 +5522,7 @@ body {
     background-color: #dae0e5 !important; }
   
   .bg-dark {
-    background-color: #343a40 !important; }
+    background-color: #0E1924 !important; }
   
   a.bg-dark:hover, a.bg-dark:focus,
   button.bg-dark:hover,
@@ -5588,7 +5587,7 @@ body {
     border-color: #f8f9fa !important; }
   
   .border-dark {
-    border-color: #343a40 !important; }
+    border-color: #0E1924 !important; }
   
   .border-white {
     border-color: #fff !important; }
@@ -8151,7 +8150,7 @@ body {
     color: #cbd3da !important; }
   
   .text-dark {
-    color: #343a40 !important; }
+    color: #0E1924 !important; }
   
   a.text-dark:hover, a.text-dark:focus {
     color: #121416 !important; }
@@ -8434,3 +8433,15 @@ body {
     font-size: 16px;
     font-weight: bold; }
   
+    ::placeholder {
+      color: red;
+      opacity: 1; /* Firefox */
+    }
+    
+    :-ms-input-placeholder { /* Internet Explorer 10-11 */
+     color: red;
+    }
+    
+    ::-ms-input-placeholder { /* Microsoft Edge */
+     color: red;
+    }
